Fne 830 mahendra sprint10 (#368)
* Patch notnull constraints (#351)

* CSS fix for transaction screen

* Making view transactions button work

* Code cleanup

* Fne 744 praveen sprint9 (#340)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* Fne 744 praveen sprint9 (#341)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* modifications to sched_a api on reports_id column

* functions to catch not null db error in backend

* coverage dates error handling

* modifying the cvg dates

* Fne 800 praveen sprint9 (#352)

* CSS fix for transaction screen

* Making view transactions button work

* Code cleanup

* Fne 744 praveen sprint9 (#340)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* Fne 744 praveen sprint9 (#341)

* Base code of FNE-744

* modified report_id to accept null values and report it as zero

* changes to api to add in try block

* modifications to sched_a api on reports_id column

* functions to catch not null db error in backend

* coverage dates error handling

* modifying the cvg dates

* templates/email_ack.html

* FNE 830 change

FNE 830 change

* FNE 830 change

FNE 830 change

* FNE 877 changes

FNE 877 changes

* FNE 877 changes

FNE 877 changes

* FNE 830 changes

FNE 830 changes

* FNE 830 changes

FNE 830 changes

* FNE 830 changes

FNE 830 changes

* FNE 830 changes

FNE 830 changes

* FNE 830 changes

FNE 830 changes

* FNE 830 changes

FNE 830 changes

* FNE 830 changes

FNE 830 changes

* FNE 830 changes

FNE 830 changes

* FNE 830 changes

FNE 830 changes

* FNE 830 chanages

FNE 830 chanages

--- a/front-end/src/app/reports/reportheader/reportheader.component.html
+++ b/front-end/src/app/reports/reportheader/reportheader.component.html
@@ -36,6 +36,7 @@
                               [reports]="reports"
                               tableType="{{reportsView}}"
                               view="current"
+                              existingReportId="{{existingReportId}}"
                             ></app-reportdetails>
                           </ng-template>
                         </ngb-tab>
@@ -48,6 +49,7 @@
                             [reports]="reports"
                             tableType="{{reportsView}}"
                             view="archieve"
+                            existingReportId="{{existingReportId}}"
                           ></app-reportdetails>
                           </ng-template>
                         </ngb-tab>
