--- a/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
+++ b/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
@@ -1,6 +1,6 @@
 <div #content>
     <div class="modal-header" [ngClass]="determineHeaderClasses()">
-      <div class="modal-title confirm__modal-title" id="modal-basic-title">{{modalTitle}}</div>
+      <h4 class="modal-title" id="modal-basic-title">{{modalTitle}}</h4>
       <button 
         type="button" 
         class="close btn btn-link" 
@@ -10,9 +10,7 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div>
-    <div class="modal-body">{{message}}
-      <ng-content></ng-content>
-    </div>
+    <div class="modal-body">{{message}}</div>
     <div class="modal-footer">
       <button 
         type="button" 
@@ -24,5 +22,10 @@
         (click)="activeModal.close('cancel')"
         class="btn btn-secondary-gray"
       >Cancel</button>   
+      <button *ngIf="isShowReportExist"
+      type="button" 
+      (click)="activeModal.close('ReportExist')"
+      class="btn btn-secondary"
+    >Show Report</button>     
     </div>
   </div>
