FNE 809 striped row types & lowercase tooltip language

--- a/front-end/src/app/forms/form-99/type/type.component.html
+++ b/front-end/src/app/forms/form-99/type/type.component.html
@@ -19,7 +19,7 @@
           </div>
         </div>
       </header>
-      <section>
+      <section style="margin-bottom: 1em;">
         <div class="content">
           <div class="grid-row">
             <div class="grid-row__col grid-row__col--12">
@@ -192,7 +192,7 @@
                           </span>
                         </button>
                         <ng-template #mswContent>
-                          Loans and Line of Credit from Lending Institutions, including copies of loan agreements.
+                          Loans and line of credit from lending institutions, including copies of loan agreements.
                         </ng-template>
                       </div>
                     </div>
