Fixing HTML editor width

--- a/front-end/src/app/forms/form-99/reason/reason.component.scss
+++ b/front-end/src/app/forms/form-99/reason/reason.component.scss
@@ -128,6 +128,7 @@
       }
       .html-editor {
         position: relative;
+        width: 100%;
         .toolbar {
         }
         .editor {
@@ -139,7 +140,7 @@
           overflow: scroll; 
           padding: 1rem;
           position: relative;
-          width: 78vw;
+          width: 95%;
           height: 50vh;
           &:empty:before {
             content: attr(placeholder);
