Fixing issue with Angular and innerHtml stripping style attributes

--- a/front-end/src/app/shared/partials/preview/preview.component.html
+++ b/front-end/src/app/shared/partials/preview/preview.component.html
@@ -175,7 +175,7 @@
         <div class="grid-row__col grid-row__col--12">
           <div 
             class="text-content" 
-            [innerHtml]="formDetails?.text"
+            [innerHtml]="formDetails?.text | safeHTML"
           >
           </div>          
         </div>
